projects/ingress-external/manifests/middleware-cloudflare.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cloudflarewarp
  namespace: ingress-external
spec:
  plugin:
    cloudflarewarp:
      disableDefault: false
