projects/ingress-external/manifests/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
  name: cloudflare
  namespace: ingress-external
spec:
  plugin:
    cloudflare:
      disableDefault: false
      debug: true
