projects/ingress-external/manifests/allow-kubeapi.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "traefik-allow-kubeapi"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: ingress-external
  egress:
  - toServices:
    - k8sService:
        serviceName: kubernetes
        namespace: default
